# py2graph

./: LICENSE  README.md  pyproject.toml
py2graph/: py2g.py
