[project]
name = "Pydantic2Graph"
authors = [
	{name = "Thomas Hagelien", email = "nims@quaat.com"}
]
description = "Pydantic to Graph converter"
readme = "README.md"
license = {file = "LICENSE"}
classifiers = [
    "Development Status :: 2 - Pre-Alpha",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Environment :: Plugins",
    "Natural Language :: English",
    "Operating System :: OS Independent",
]
requires-python = "~=3.9"
dynamic = ["version"]

dependencies = [
	"rdflib>=6.2",
	"pydantic>=1.10"
]

[tool.flit.module]
name = "py2graph"

### Dev tools configuration
[tool.mypy]
python_version = "3.9"
ignore_missing_imports = true
scripts_are_modules = true
warn_unused_configs = true
show_error_codes = true
allow_redefinition = true

[tool.pylint.messages_control]
max-line-length = 90
disable = [
    "duplicate-code",
    "no-name-in-module",
    "too-few-public-methods",
    "no-self-argument"
]
